--- a/blobmetadb.Store.Test/blobmetadb.Store.Test.csproj
+++ b/blobmetadb.Store.Test/blobmetadb.Store.Test.csproj
@@ -8,7 +8,7 @@
     <ProjectGuid>{B8C2622B-CFB5-4D45-83D8-F2768F271080}</ProjectGuid>
     <OutputType>Library</OutputType>
     <RootNamespace>blobmetadb.Store.Redis.Test</RootNamespace>
-    <AssemblyName>blobmetadb.Store.Redis.Test</AssemblyName>
+    <AssemblyName>BlobMetaDb.Store.Redis.Test</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
